--- a/dashboard-dosen.html
+++ b/dashboard-dosen.html
@@ -88,8 +88,9 @@
                                 <td class="px-4 py-2 text-sm"><span
                                         class="px-2 py-1 bg-amber-100 text-amber-800 rounded-full text-xs">Menunggu</span>
                                 </td>
-                                <td class="px-4 py-2 text-sm"><button
-                                        class="text-green-600 hover:underline">Periksa</button></td>
+                                <td class="px-4 py-2 text-sm">
+                                    <a href="paneldosen.html" class="text-green-600 hover:underline">Periksa</a>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="px-4 py-2 text-sm">10/06/2023</td>
@@ -98,8 +99,8 @@
                                 <td class="px-4 py-2 text-sm"><span
                                         class="px-2 py-1 bg-green-100 text-green-800 rounded-full text-xs">Disetujui</span>
                                 </td>
-                                <td class="px-4 py-2 text-sm"><button
-                                        class="text-green-600 hover:underline">Lihat</button></td>
+                                <td class="px-4 py-2 text-sm"><a href="paneldosen.html"
+                                        class="text-green-600 hover:underline">Periksa</a></td>
                             </tr>
                         </tbody>
                     </table>
