--- a/dashboard-admin.html
+++ b/dashboard-admin.html
@@ -137,6 +137,35 @@
                 </div>
             </div>
 
+            <div>
+                <!-- 3. Monitoring Aktivitas Magang -->
+                <section>
+                    <h2 class="text-lg font-semibold text-gray-700 mb-3">Monitoring Aktivitas Magang</h2>
+                    <div class="overflow-x-auto">
+                        <table class="min-w-full divide-y divide-gray-200">
+                            <thead>
+                                <tr>
+                                    <th class="px-4 py-2">Mahasiswa</th>
+                                    <th class="px-4 py-2">Status Magang</th>
+                                    <th class="px-4 py-2">Laporan Terkirim</th>
+                                    <th class="px-4 py-2">Feedback Dosen</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="px-4 py-2">Siti Rahayu</td>
+                                    <td class="px-4 py-2 text-green-600">Berlangsung</td>
+                                    <td class="px-4 py-2">6</td>
+                                    <td class="px-4 py-2">4 komentar</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+            </div>
+
+
+
             <div class="bg-white border border-gray-200 rounded-lg">
                 <div class="border-b border-gray-200 px-4 py-3 flex justify-between items-center">
                     <h3 class="font-medium">Pengumuman Sistem</h3>
