--- a/dashboard-mahasiswa.html
+++ b/dashboard-mahasiswa.html
@@ -87,7 +87,9 @@
             <div class="bg-white border border-gray-200 rounded-lg">
                 <div class="border-b border-gray-200 px-4 py-3 flex justify-between items-center">
                     <h3 class="font-medium">Laporan Magang</h3>
-                    <button class="bg-blue-600 text-white px-3 py-1 rounded text-sm hover:bg-blue-700">+ Tambah</button>
+                    <a class="bg-blue-600 text-white px-3 py-1 rounded text-sm hover:bg-blue-700"
+                        href="upload-dokumen.html">+
+                        Tambah</a>
                 </div>
                 <div class="p-4 overflow-x-auto">
                     <table class="min-w-full divide-y divide-gray-200">
