--- a/login.html
+++ b/login.html
@@ -2,15 +2,14 @@
 <html lang="id">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - SIMAGA</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="flex items-center justify-center p-4">
-    <!-- Login Section -->
+<body class="flex items-center justify-center min-h-screen">
     <div id="login-section" class="login-card w-full max-w-md rounded-xl p-8 relative">
         <div class="text-center mb-8">
             <h1 class="text-3xl font-bold text-blue-800">SIMAGA</h1>
@@ -18,44 +17,28 @@
         </div>
 
         <div class="mb-6">
-            <div class="flex justify-center space-x-4 mb-6">
-                <button id="btn-mahasiswa"
-                    class="px-4 py-2 rounded-lg bg-blue-600 text-white font-medium hover:bg-blue-700 transition active">Mahasiswa</button>
-                <button id="btn-dosen"
-                    class="px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-medium hover:bg-gray-300 transition">Dosen</button>
-                <button id="btn-admin"
-                    class="px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-medium hover:bg-gray-300 transition">Admin</button>
-            </div>
-
-            <form id="login-form" class="space-y-4">
+            <form id="login-form" action="../login.php" method="POST" class="space-y-4">
                 <div>
-                    <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Username</label>
-                    <input type="text" id="username"
+                    <label for="login_id" class="block text-sm font-medium text-gray-700 mb-1">NIM / NIDN /
+                        Email</label>
+                    <input type="text" id="login_id" name="login_id"
                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
-                        placeholder="Masukkan username">
+                        placeholder="Masukkan NIM" required />
                 </div>
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-                    <input type="text" id="password"
+                    <input type="password" id="password" name="password"
                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
-                        placeholder="Masukkan password">
-                    <p class="text-xs text-gray-500 mt-1">*Ini adalah demo, jangan masukkan password asli</p>
+                        placeholder="Masukkan password" required />
                 </div>
                 <div>
-                    <button type="button" id="login-button"
+                    <button type="submit"
                         class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition font-medium">Masuk</button>
                 </div>
             </form>
 
-            <div class="mt-4 text-center">
-                <a href="#" id="forgot-password-link" class="text-sm text-blue-600 hover:underline">Lupa password?</a>
-                <p class="mt-2 text-sm text-gray-600">Belum punya akun? <a href="register.html"
-                        class="text-blue-600 hover:underline font-medium">Daftar sekarang</a></p>
-            </div>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
