--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - SIMAGA</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../assets/style.css" />
 </head>
 
 <body class="flex items-center justify-center min-h-screen">
@@ -19,11 +19,11 @@
         <div class="mb-6">
             <form id="login-form" action="../login.php" method="POST" class="space-y-4">
                 <div>
-                    <label for="login_id" class="block text-sm font-medium text-gray-700 mb-1">NIM / NIDN /
+                    <label for="login_id" class="block text-sm font-medium text-gray-700 mb-1">NPM / NAMA /
                         Email</label>
                     <input type="text" id="login_id" name="login_id"
                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
-                        placeholder="Masukkan NIM" required />
+                        placeholder="Masukkan NPM" required />
                 </div>
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
